<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TableRow
            android:id="@+id/exif_make"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/exif_make_key"
                android:text="@string/text_exif_key_make"
                android:layout_weight="@integer/exif_table_key_weight"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:id="@+id/exif_make_value"
                android:layout_weight="@integer/exif_table_value_weight"/>
        </TableRow>
        <TableRow
            android:id="@+id/exif_model"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/exif_model_key"
                android:text="@string/text_exif_key_model"
                android:layout_weight="@integer/exif_table_key_weight"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:id="@+id/exif_model_value"
                android:layout_weight="@integer/exif_table_value_weight"/>
        </TableRow>
        <TableRow
            android:id="@+id/exif_exposure_time"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/exif_exposure_time_key"
                android:text="@string/text_exif_key_exposure_time"
                android:layout_weight="@integer/exif_table_key_weight"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:id="@+id/exif_exposure_time_value"
                android:layout_weight="@integer/exif_table_value_weight"/>
        </TableRow>
        <TableRow
            android:id="@+id/exif_aperture"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/exif_aperture_key"
                android:text="@string/text_exif_key_aperture"
                android:layout_weight="@integer/exif_table_key_weight"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:id="@+id/exif_aperture_value"
                android:layout_weight="@integer/exif_table_value_weight"/>
        </TableRow>
        <TableRow
            android:id="@+id/exif_focal_length"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/exif_focal_length_key"
                android:text="@string/text_exif_key_focal_length"
                android:layout_weight="@integer/exif_table_key_weight"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:id="@+id/exif_focal_length_value"
                android:layout_weight="@integer/exif_table_value_weight"/>
        </TableRow>
        <TableRow
            android:id="@+id/exif_iso"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/exif_iso_key"
                android:text="@string/text_exif_key_iso"
                android:layout_weight="@integer/exif_table_key_weight"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:id="@+id/exif_iso_value"
                android:layout_weight="@integer/exif_table_value_weight"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>